# pasteuriser-ai-assistant

./: .gitmodules  CMakeLists.txt  README.md  Scaler.cpp  data_form.cpp  data_form.h  math_for_network.cpp  math_for_network.h  network.cpp  network.h  paia.cpp  paia.h  visual.py
.github/workflows/: cmake-multi-platform.yml  codeql-analysis.yml
Common/: Common.h  DataDumper.h  DataFormats.h  DataReader.cpp  DataReader.h  DataReformer.cpp  DataReformer.h  StrConverter.cpp  StrConverter.h  StrDivider.cpp  StrDivider.h  WARNING.cpp  WARNING.h  includes.h
CppForecasting/data_changer/: data_changer.h
CppForecasting/data_changer/doc/: README.md
CppForecasting/data_changer/src/: data_changer.cpp  data_changer.h
CppForecasting/data_form/: data_form.cpp  data_form.h
CppForecasting/data_form/doc/: README.md
CppForecasting/data_form/scr/: data_form.cpp  data_form.h
CppForecasting/network/: network.cpp  network.h
CppForecasting/network/doc/: readme.md
CppForecasting/network/doc/readme.md/: readme.md
CppForecasting/network/src/: network.cpp  network.h
DataManipulator/: CMakeLists.txt  DMIncludes.h  DataFormats.cpp  DataFormats.h  DataManipulator.cpp  DataManipulator.h  DataReformer.cpp  DataReformer.h  MainOCDFMenu.cpp  MainOCDFMenu.h  MainTDFMenu.cpp  MainTDFMenu.h  TDFCreator.cpp  TDFCreator.h  WARNING.cpp  WARNING.h  readme.md
Exceptions/: Exceptions.cpp  Exceptions.h  IOExceptions.cpp  IOExceptions.h
Lite_CPP_version/: PAIA.cpp  Scaler.h  network.cpp  network.h
NNTrainer/: CMakeLists.txt  ModelCreater.cpp  ModelCreater.h  NNTrainer.cpp  NNTrainer.h
NeuroModels/: ActFunctions.cpp  ActFunctions.h  NeuroSkeletons.cpp  NeuroSkeletons.h  Scaler.cpp  Scaler.h  TInVanilaLSTM.cpp  TinVanilaLSTM.h  VanilaLSTM.cpp  VanilaLSTM.h  WeightFiller.cpp  WeightFiller.h
OldVersions/Lite_CPP_version/: math_for_network.cpp
OtherVersions/Lite_CPP_version/: PAIA.h  data_form.cpp  math_for_network.h
PyVisualisation/: ErrorVisual.py  OCDF_OneCid_Visual.py  OCDF_SixCids_Visual.py  TInVanilaLSTM_Test.py  VanilaLSTM_Test.py  data_7_cid_1.csv
Tests/: CMakeLists.txt  PAIATests.cpp  PAIATests.h  includes.h
Tests/Common.Tests/: DataDumper.Tests.cpp  DataDumper.Tests.h  DataFormats.Tests.cpp  DataFormats.Tests.h  DataReader.Tests.cpp  DataReader.Tests.h  DataReformer.Tests.cpp  DataReformer.Tests.h  StrConverter.Tests.cpp  StrConverter.Tests.h  StrDivider.Tests.cpp  StrDivider.Tests.h  Warning.Tests.cpp  Warning.Tests.h
Tests/TestFiles/: Corrupted.csv  Corrupted.ocdf.csv  Corrupted.tdf.csv  Holey.ocdf.csv  Holey.tdf.csv  Invalid.csv  Invalid_Values.ocdf.csv  One_Line.ocdf.csv  One_Line.tdf.csv  Rigth.ocdf.csv  Rigth.tdf.csv
docs/manual/: DataManipulator.tex
processing/src/: processing.py
